syntax = "proto3";

import "amadeus-go/api/amadeus/type/amadeus.type.proto";

package amadeus.func;

service AmadeusService {
    // I know where I want to fly, the dates and duration, what are the best flight deals?
    rpc FlightLowFareSearch (FlightLowFareSearchRequest) returns (amadeus.type.FlightLowFareSearchResponse);

    // Where can I fly from/to Delhi in the next months for $400?
    rpc FlightInspirationSearch (FlightInspirationSearchRequest) returns (amadeus.type.FlightInspirationSearchResponse);

    // Where were people flying to the most from London in September 2017?
    rpc FlightMostTraveledDestinations (FlightMostTraveledDestinationsRequest) returns (amadeus.type.FlightMostTraveledDestinationsResponse);
}

// msgCode: 0001
// => amadeus.type.FlightLowFareSearchResponse (0050)
message FlightLowFareSearchRequest {
    string origin = 1;
    string destination = 2;
    string departure_date = 3;
    string return_date = 4;
}

// msgCode: 0002
// => amadeus.type.FlightInspirationSearchResponse (0070)
message FlightInspirationSearchRequest {
    string origin = 1;
    int32 maxPrice = 2;
}

// msgCode: 0003
// => amadeus.type.FlightMostTraveledDestinationsResponse (0073)
message FlightMostTraveledDestinationsRequest {
    string originCityCode = 1;
    string period = 2;
}
