syntax = "proto3";

import "google/protobuf/any.proto";

package amadeus.type;

// msgCode: 0050
message FlightLowFareSearchResult {
    repeated Data data = 1;
    Dictionaries dictionaries = 2;
    Meta meta = 3;
}

// msgCode: 0051
message Data {
    string type = 1;
    string id = 2;
    repeated OfferItem offerItems = 3;
}

// msgCode: 0052
message OfferItem {
    repeated Service services = 1;
    Price price = 2;
    Price pricePerAdult = 3;
}

// msgCode: 0053
message Service {
    repeated Segment segments = 1;
}

// msgCode: 0054
message Segment {
    repeated FlightSegment flightSegments = 1;
    PricingDetailPerAdult pricingDetailPerAdult = 2;
}

// msgCode: 0055
message FlightSegment {
    DepartureArrival departure = 1;
    DepartureArrival arrival = 2;
    string carrierCode = 3;
    string number = 4;
    Aircraft aircraft = 5;
    Operating operating = 6;
    string duration = 7;
}

// msgCode: 0056
message DepartureArrival {
    string iataCode = 1;
    string terminal = 2;
    string at = 3;
}

// msgCode: 0057
message Aircraft {
    string code = 1;
}

// msgCode: 0058
message Operating {
    string carrierCode = 3;
    string number = 4;
}

// msgCode: 0059
message PricingDetailPerAdult {
    string travelClass = 1;
    string fareClass = 2;
    int32 availability = 3;
    string fareBasis = 4;
}

// msgCode: 0060
message Price {
    string total = 1;
    string totalTaxes = 2;
}

// msgCode: 0061
message Dictionaries {
    google.protobuf.Any carriers = 1;
    google.protobuf.Any currencies = 2;
    google.protobuf.Any aircraft = 3;
    google.protobuf.Any locations = 4;
}

// msgCode: 0062
message Meta {
    Links links = 1;
    string currency = 2;
    Defaults defaults = 3;
}

// msgCode: 0063
message Links {
    string self = 1;
}

// msgCode: 0064
message Defaults {
    bool nonStop = 1;
    int32 adults = 2;
}

